tests/ui/consts/size_of-requires-type-annotation-in-const.stderr
error[E0308]: mismatched types
  --> $DIR/issue-47486.rs:2:10
   |
LL |     () < std::mem::size_of::<_>();
   |     --   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `usize`
   |     |
   |     expected because this is `()`

error[E0282]: type annotations needed
  --> $DIR/issue-47486.rs:3:11
   |
LL |     [0u8; std::mem::size_of::<_>()];
   |           ^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `size_of`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
